Updated app so smooth scroll is temporairly disabled on route changes, added a in page anchor to ensure the top of the document is always visible on route changes and auto focus, added a transition to in page nav.

--- a/styles/_base.css
+++ b/styles/_base.css
@@ -25,6 +25,12 @@
     scroll-behavior: smooth;
   }
 
+  @media screen and (prefers-reduced-motion: reduce) {
+    html {
+      scroll-behavior: auto;
+    }
+  }
+
   body {
     @apply text-base;
     color: theme('colors.charcoal');
